# forecsting_pipeline

./: README.md  config.json  databricks.yml  pyproject.toml
forecasting_promocional/: README.md  data_loaded.py  data_preprocessing.py  databricks.yml  model_fit_and_predict.py  run_model_pipeline.py  save_results.py  setup.py
forecasting_promocional/resources/: forecasting_promocional_job.yml  forecasting_promocional_pipeline.yml
forecasting_promocional/src/: dlt_pipeline.ipynb  notebook.ipynb
forecasting_promocional/tests/: main_test.py
fp_functions/: df_query.py  model_fit.py  preprocess_data.py
schemas/: names.py  schemas.py
tests/: test_data_loaded.py  test_data_preprocessing.py  test_model_fit_and_results.py
