[tool.poetry]
name = "forecasting_promo"
version = "0.1.1"
description = "Forecasting productos promo"
authors = ["lcolombo-cenco <leticia.colombo@cencosud.com.uy>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.2"
holidays = "0.54"
scikit-learn = "1.5.1"
matplotlib = "3.9.2"
pyspark = "3.5.0"
pytest = "8.3.3"
pytest-mock = "3.14.0"

[tool.poetry.group.dev.dependencies]
mlflow = "2.10.0"
ipykernel = "6.29.5"
pytest = "8.3.3"
pre-commit = "3.8.0"


[tool.poetry.scripts]
"pipeline_forecasting" = "forecasting_promo.tasks.run_model_pipeline:entrypoint"

[tool.black]
line-length = 108

[tool.isort]
profile = "black"
line_length = 108

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
